--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Tir à l'Arc - Accueil</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -14,7 +16,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
-                <li><a href="">Le Tir à l'Arc</a></li>
+                <li><a href="tir-a-l-arc.html">Le Tir à l'Arc</a></li>
                 <li><a href="">À propos</a></li>
             </ul>
         </nav>
