--- a/tir-a-l-arc.html
+++ b/tir-a-l-arc.html
@@ -17,7 +17,7 @@
             <ul>
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="tir-arc.html">Le Tir à l'Arc</a></li>
-                <li><a href="">À propos</a></li>
+                <li><a href="page-finale.html">À propos</a></li>
             </ul>
         </nav>
     </header>
