--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <ul>
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="tir-a-l-arc.html">Le Tir à l'Arc</a></li>
-                <li><a href="">À propos</a></li>
+                <li><a href="page-finale.html">À propos</a></li>
             </ul>
         </nav>
         </div>
@@ -37,7 +37,7 @@
         <img width="300px" height="150px" src="images/cible_nationnal.jpg" alt="Image d'un archer" />
 
     </ul>
-    <a href="">En savoir plus</a>
+    <a href="tir-a-l-arc.html">En savoir plus</a>
 
     <footer>
         <div>
