--- a/page-finale.html
+++ b/page-finale.html
@@ -12,7 +12,8 @@
 <body>
 
     <header>
-            <h1>À propos de l'auteur</h1>
+        <div class="conteneur">
+            <center><h1 class="title">Menu</h1></center>
             <nav>
                 <ul>
                     <li><a href="index.html">Accueil</a></li>
@@ -22,20 +23,21 @@
             </nav>
     </header>
 
-        <div>
+    <section id="about-me">
+        <div class="conteneur">
             <h2>Qui suis-je ?</h2>
             <p>Je suis passionné par le tir à l'arc depuis plusieurs années. Ce site a été créé dans le cadre de mon
                 projet pour partager ma passion et mes connaissances sur ce sport fascinant. Je pratique le tir à l'arc
                 en loisir et participe régulièrement à des compétitions locales.</p>
             <p>Mon objectif est de vous partager des informations sur les
                 équipements, les techniques, et les bienfaits du tir à l'arc.</p>
-                
-            <a href="index.html">Retour à l'accueil</a>
+
+            <a href="index.html" class="boutton">Retour à l'accueil</a>
         </div>
-        
+    </section>
 
     <footer>
-        <div>
+        <div class="conteneur">
             <p> 2024 Tir à l'Arc - Tous droits réservés</p>
         </div>
     </footer>
