--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
 
     <header>
-        <h1>Le Tir à l'Arc</h1>
+        <div class="conteneur"></div>
+        <h1 class="title">Le Tir à l'Arc</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
@@ -22,28 +23,30 @@
         </nav>
         </div>
     </header>
+    <section id="intro">
+        <div class="conteneur">
+            <div class="intro-text">
+                <h2>Découvrez le Tir à l'Arc</h2>
+                <p>Un sport qui allie précision, concentration et discipline. Découvrez cet art millénaire.</p>
+                <img style="float:right" width="500px" height="500px" src="images/30.jpg" alt="Image d'un archer" />
 
-    <h2>Découvrez le Tir à l'Arc</h2>
-    <p>Un sport qui allie précision, concentration et discipline. Découvrez cet art millénaire.</p>
-    <img width="150px" height="150px" src="images/30.jpg" alt="Image d'un archer" />
+                <h2>Pourquoi pratiquer le Tir à l'Arc ?</h2>
+                <p>Le tir à l'arc est une discipline complète qui offre de nombreux bienfaits :</p>
+                <ul>
+                    <li>Amélioration de la concentration et de la gestion du stress</li>
+                    <li>Renforcement des muscles du haut du corps</li>
+                    <li>Compétitions serrée contre vous même ou contre d'autres personnes</li>
 
-    <h2>Pourquoi pratiquer le Tir à l'Arc ?</h2>
-    <p>Le tir à l'arc est une discipline complète qui offre de nombreux bienfaits :</p>
-    <ul>
-        <li>Amélioration de la concentration et de la gestion du stress</li>
-        <li>Renforcement des muscles du haut du corps</li>
-        <li>Compétitions serrée contre vous même ou contre d'autres personnes</li>
+                    <img width="600px" height="300px" src="images/cible_nationnal.jpg" alt="Image d'un archer" />
 
-        <img width="300px" height="150px" src="images/cible_nationnal.jpg" alt="Image d'un archer" />
+                </ul>
+                <a href="tir-a-l-arc.html" class="boutton">En savoir plus</a>
 
-    </ul>
-    <a href="tir-a-l-arc.html">En savoir plus</a>
-
-    <footer>
-        <div>
-            <p> 2024 Tir à l'Arc - Tous droits réservés</p>
-        </div>
-    </footer>
+                <footer>
+                    <div class="conteneur">
+                        <p> 2024 Tir à l'Arc - Tous droits réservés</p>
+                    </div>
+                </footer>
 
 </body>
 
