--- a/tir-a-l-arc.html
+++ b/tir-a-l-arc.html
@@ -12,49 +12,70 @@
 <body>
 
     <header>
-        <h1>Menu</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="tir-arc.html">Le Tir à l'Arc</a></li>
-                <li><a href="page-finale.html">À propos</a></li>
-            </ul>
-        </nav>
+        <div class="conteneur">
+            <center><h1 class="title">Menu</h1></center>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Accueil</a></li>
+                    <li><a href="tir-a-l-arc.html">Le Tir à l'Arc</a></li>
+                    <li><a href="page-finale.html">À propos</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
+    <section id="detailed-info">
+        <div class="conteneur"></div>
+        <h2>Le Tir à l'Arc : Un Sport Précis</h2>
+        <p>Le tir à l'arc est une activité physique et mentale qui exige de la patience, de la précision et un
+            contrôle de soi. Il existe plusieurs formes de tir à l'arc, comme l'arc traditionnel, l'arc à poulies,
+            et le tir en compétition avec des cibles fixes ou mobiles.</p>
 
-    <h2>Le Tir à l'Arc : Un Sport Précis</h2>
-    <p>Le tir à l'arc est une activité physique et mentale qui exige de la patience, de la précision et un
-        contrôle de soi. Il existe plusieurs formes de tir à l'arc, comme l'arc traditionnel, l'arc à poulies,
-        et le tir en compétition avec des cibles fixes ou mobiles.</p>
+        <div class="grid-page">
+            <div class="equipment">
 
-        <h3>Les types d'arc</h3>
-        <p>Le traditionnel SV (arc traditionnel sans viseur) , L'arc AV( traditionnel avec viseur) et l'arc à poulie(très puissant avec viseur):</p>
-        <img width="200" height="200" src="https://hattila.com/img/cms/7-arc-barebow.jpg" alt="Image d'un archer" />
-        <img width="200" height="200" src="https://www.erhart-sports.com/5974-large_default/kinetic-lancer-kit-arc-classique.jpg" alt="Image d'un archer" />
-        <img width="200" height="200" src="https://www.sherwood-archerie.com/images/bl_1584612_image1.jpg" alt="Image d'un archer" />
+                <h3>Les types d'arc</h3>
+                <p>Le traditionnel SV (arc traditionnel sans viseur) , L'arc AV( traditionnel avec viseur) et l'arc à
+                    poulie(très puissant avec viseur):</p>
+                <img width="200" height="200" src="https://hattila.com/img/cms/7-arc-barebow.jpg"
+                    alt="Image d'un archer" />
+                <img width="200" height="200"
+                    src="https://www.erhart-sports.com/5974-large_default/kinetic-lancer-kit-arc-classique.jpg"
+                    alt="Image d'un archer" />
+                <img width="200" height="200" src="https://www.sherwood-archerie.com/images/bl_1584612_image1.jpg"
+                    alt="Image d'un archer" />
 
 
 
 
-    <h3>Les Équipements</h3>
-    <p>L'arc, les flèches, la cible, et les protections sont les éléments de base du tir à l'arc. Chaque
-        composant doit être choisi en fonction de l'usage et des préférences de l'archer.</p>
-        <img width="200" height="200" src="images/arc.jpeg" alt="Image d'un archer" />
-        <img width="200px" height="200px" src="https://www.cdiscount.com/pdt2/3/4/7/1/700x700/ovo5293216077347/rw/fleche-d-arc-fleches-de-chasse-tir-a-l-arc-fleche.jpg" alt="Image d'un archer" />
-        <img width="200px" height="200px" src="https://www.sherwood-archerie.com/images/bl_721584_image2.jpg" alt="Image d'un archer" />
-        <p>De plus il est possible d'ajouter un viseur, un stabilisateur ou un cliqueur à son arc.</p>
-        <img width="400px" height="400px" src="images/viseur.jpg" alt="Image d'un archer" />
+                <h3>Les Équipements</h3>
+                <p>L'arc, les flèches, la cible, et les protections sont les éléments de base du tir à l'arc. Chaque
+                    composant doit être choisi en fonction de l'usage et des préférences de l'archer.</p>
+                <img width="200" height="200" src="images/arc.jpeg" alt="Image d'un archer" />
+                <img width="200px" height="200px"
+                    src="https://www.cdiscount.com/pdt2/3/4/7/1/700x700/ovo5293216077347/rw/fleche-d-arc-fleches-de-chasse-tir-a-l-arc-fleche.jpg"
+                    alt="Image d'un archer" />
+                <img width="200px" height="200px" src="https://www.sherwood-archerie.com/images/bl_721584_image2.jpg"
+                    alt="Image d'un archer" />
+                <p>De plus il est possible d'ajouter un viseur, un stabilisateur ou un cliqueur à son arc.</p>
+                <img width="400px" height="400px" src="images/viseur.jpg" alt="Image d'un archer" />
 
-    <h3>Les Techniques</h3>
-    <p>Les techniques de tir sont variées : posture, visée, respiration, et décoche de la corde sont
-        autant d'éléments à maîtriser pour un tir réussi. Ces mouvements sont long à mettre en place et nécessite une rigueur importante afin
-        de ne pas tirer d'une mauvaise manière</p>
-    <a href="index.html">Retour à l'accueil</a>
+            </div>
+            <div class="techniques">
+                <h3>Les Techniques</h3>
+                <p>Les techniques de tir sont variées : posture, visée, respiration, et décoche de la corde sont
+                    autant d'éléments à maîtriser pour un tir réussi. Ces mouvements sont long à mettre en place et
+                    nécessite une rigueur importante afin
+                    de ne pas tirer d'une mauvaise manière</p>
+            </div>
+        </div>
+        <a href="index.html" class="boutton">Retour à l'accueil</a>
     </section>
 
     <footer>
+        <div class="conteneur"></div>
         <p> 2024 Tir à l'Arc - Tous droits réservés</p>
+        </div>
     </footer>
 
 </body>
