--- a/page-finale.html
+++ b/page-finale.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="conteneur">
-            <center><h1 class="title">Menu</h1></center>
+            <h1 class="title">Menu</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Accueil</a></li>
@@ -21,19 +21,43 @@
                 </ul>
             </nav>
     </header>
-
-    <section id="about-me">
         <div class="conteneur">
+            <div class="intro-text">
             <h2>Qui suis-je ?</h2>
-            <p>Je suis passionné par le tir à l'arc depuis plusieurs années. Ce site a été créé dans le cadre de mon
-                projet pour partager ma passion et mes connaissances sur ce sport fascinant. Je pratique le tir à l'arc
-                en loisir et participe régulièrement à des compétitions locales.</p>
-            <p>Mon objectif est de vous partager des informations sur les
-                équipements, les techniques, et les bienfaits du tir à l'arc.</p>
+            <p>Je suis passionné par le tir à l'arc depuis plusieurs années. J'ai commencé à l'âge de 12 ans dans le club de Condé (près d'Alençon). 
+                Ce club est fais partis de l'association ufolep, ce qui signifie qu'il ne fais pas partis de la fédération.</p>
 
-            <a href="index.html" class="boutton">Retour à l'accueil</a>
+            <h2>La compétition</h2>
+            <p>En ufolep il y a 2 type de compétitions : Les régionals et les nationals. Un régional à lieu tous les mois et il y a un national en hiver
+                pour le tir en intérieur et un national été pour le tir en extérieur.
+                Etant champion de l'Orne chaques moi et après avoir fais un national hiver satisfaisant, je décide de faire le national été.
+            </p>
         </div>
-    </section>
+        
+        <section id="tableaux">
+            <div class="tableaux container">
+                <div class="tableaux-header">
+                    <div class="all-tableaux">
+                        <div class="tableau-item">
+                            <div class="tableau-info">
+                                <h2>Les Techniques</h2>
+                                <p>Les techniques de tir sont variées : posture, visée, respiration, et décoche de
+                                    la corde sont
+                                    autant d'éléments à maîtriser pour un tir réussi. Ces mouvements sont long à
+                                    mettre en place et
+                                    nécessite une rigueur importante afin de ne pas tirer d'une mauvaise manière</p>
+                            </div>
+                            <div class="tableau-img">
+                                <img width="900" height="120" src="/images/classement.png" alt="img">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+    
 
     <footer>
         <div class="conteneur">
