--- a/tir-a-l-arc.html
+++ b/tir-a-l-arc.html
@@ -13,9 +13,7 @@
 
     <header>
         <div class="conteneur">
-            <center>
-                <h1 class="title">Menu</h1>
-            </center>
+            <h1 class="title">Menu</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Accueil</a></li>
@@ -25,25 +23,26 @@
             </nav>
         </div>
     </header>
+    <div class="intro-text">
         <h2>Le Tir à l'Arc : Un Sport Précis</h2>
         <p>Le tir à l'arc est une activité physique et mentale qui exige de la patience, de la précision et
             un
             contrôle de soi. Il existe plusieurs formes de tir à l'arc, comme l'arc traditionnel, l'arc à
             poulies,
             et le tir en compétition avec des cibles fixes ou mobiles.</p>
+    </div>
 
 
-        <section id="tableaux">
-            <div class="tableaux container">
-                <div class="tableaux-header">
+    <section id="tableaux">
+        <div class="tableaux container">
+            <div class="tableaux-header">
                 <div class="all-tableaux">
                     <div class="tableau-item">
                         <div class="tableau-info">
                             <h1>Matériel</h1>
                             <h2>Les types d'arc</h2>
-                            <p>Le traditionnel SV (arc traditionnel sans viseur) , L'arc AV(
-                                traditionnel avec viseur) et l'arc à
-                                poulie(très puissant avec viseur):</p>
+                            <p>Le traditionnel SV (arc traditionnel sans viseur) , L'arc AV( traditionnel avec viseur)
+                                et l'arc à poulie(très puissant avec viseur):</p>
                         </div>
                         <div class="tableau-img">
                             <img width="300" height="300" src="https://hattila.com/img/cms/7-arc-barebow.jpg" alt="img">
@@ -54,95 +53,88 @@
                                 src="https://www.sherwood-archerie.com/images/bl_1584612_image1.jpg" alt="img">
                         </div>
                     </div>
-
-
-
-
-                    <section id="tableaux">
-                        <div class="tableaux container">
-                            <div class="tableaux-header">
-                            </div>
-                            <div class="all-tableaux">
-                                <div class="tableau-item">
-                                    <div class="tableau-info">
-                                        <h2>Les Équipements</h2>
-                                        <p>L'arc, les flèches, la cible, et les protections sont les
-                                            éléments de base du tir à l'arc. Chaque
-                                            composant doit être choisi en fonction de l'usage et des
-                                            préférences de l'archer.</p>
-                                        </p>
-                                    </div>
-                                    <div class="tableau-img">
-                                        <img width="300" height="300"
-                                            src="https://www.cdiscount.com/pdt2/3/4/7/1/700x700/ovo5293216077347/rw/fleche-d-arc-fleches-de-chasse-tir-a-l-arc-fleche.jpg"
-                                            alt="img">
-                                        <img width="300" height="300"
-                                            src="https://www.sherwood-archerie.com/images/bl_721584_image2.jpg"
-                                            alt="img">
-                                    </div>
-                                </div>
-
-
-                                <section id="tableaux">
-                                    <div class="tableaux container">
-                                        <div class="tableaux-header">
-                                        </div>
-                                        <div class="all-tableaux">
-                                            <div class="tableau-item">
-                                                <div class="tableau-info">
-                                                    <h2>Les Équipements</h2>
-                                                    <p>L'arc, les flèches, la cible, et les
-                                                        protections sont les
-                                                        éléments de base du tir à l'arc. Chaque
-                                                        composant doit être choisi en fonction de
-                                                        l'usage et des
-                                                        préférences de l'archer.</p>
-                                                    </p>
-                                                </div>
-                                                <div class="tableau-img">
-                                                    <img width="600" height="400" src="images/viseur.png" alt="img">
-                                                </div>
-                                            </div>
-
-                                            <section id="tableaux">
-                                                <div class="tableaux container">
-                                                    <div class="tableaux-header">
-                                                    </div>
-                                                    <div class="all-tableaux">
-                                                        <div class="tableau-item">
-                                                            <div class="tableau-info">
-                                                                <h2>Les Techniques</h2>
-                                                                <p>Les techniques de tir sont variées : posture, visée,
-                                                                    respiration,
-                                                                    et décoche de la corde sont
-                                                                    autant d'éléments à maîtriser pour un tir réussi.
-                                                                    Ces mouvements
-                                                                    sont long à mettre en place et
-                                                                    nécessite une rigueur importante afin
-                                                                    de ne pas tirer d'une mauvaise manière</p>
-                                                                </p>
-                                                            </div>
-                                                            <div class="tableau-img">
-                                                                <img width="400" height="300" src="images/posture tête.jpg"
-                                                                    alt="img">
-                                                                <img width="400" height="300" src="images/posture doights.jpg"
-                                                                    alt="img">
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                        </div>
-
-                                    </div>
-                            </div>
-                            <a href="index.html" class="boutton">Retour à l'accueil</a>
-                    </section>
-
-                    <footer>
-                        <div class="conteneur"></div>
-                        <p> 2024 Tir à l'Arc - Tous droits réservés</p>
                 </div>
-                </footer>
+            </div>
+        </div>
+    </section>
+
+    <section id="tableaux">
+        <div class="tableaux container">
+            <div class="tableaux-header">
+                <div class="all-tableaux">
+                    <div class="tableau-item">
+                        <div class="tableau-info">
+                            <h2>Les Équipements</h2>
+                            <p>L'arc, les flèches, la cible, et les protections sont les éléments de base du tir à
+                                l'arc. Chaque
+                                composant doit être choisi en fonction de l'usage et des préférences de l'archer.</p>
+                        </div>
+                        <div class="tableau-img">
+                            <img width="300" height="300"
+                                src="https://www.cdiscount.com/pdt2/3/4/7/1/700x700/ovo5293216077347/rw/fleche-d-arc-fleches-de-chasse-tir-a-l-arc-fleche.jpg"
+                                alt="img">
+                            <img width="300" height="300"
+                                src="https://www.sherwood-archerie.com/images/bl_721584_image2.jpg" alt="img">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+        <section id="tableaux">
+            <div class="tableaux container">
+                <div class="tableaux-header">
+                    <div class="all-tableaux">
+                        <div class="tableau-item">
+                            <div class="tableau-info">
+                                <h2>Les Équipements</h2>
+                                <p>L'arc, les flèches, la cible, et les protections sont les éléments de base du tir à
+                                    l'arc.
+                                    Chaque composant doit être choisi en fonction de l'usage et des préférences de
+                                    l'archer.</p>
+                            </div>
+                            <div class="tableau-img">
+                                <img width="600" height="400" src="images/viseur.png" alt="img">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+            <section id="tableaux">
+                <div class="tableaux container">
+                    <div class="tableaux-header">
+                        <div class="all-tableaux">
+                            <div class="tableau-item">
+                                <div class="tableau-info">
+                                    <h2>Les Techniques</h2>
+                                    <p>Les techniques de tir sont variées : posture, visée, respiration, et décoche de
+                                        la corde sont
+                                        autant d'éléments à maîtriser pour un tir réussi. Ces mouvements sont long à
+                                        mettre en place et
+                                        nécessite une rigueur importante afin de ne pas tirer d'une mauvaise manière</p>
+                                </div>
+                                <div class="tableau-img">
+                                    <img width="400" height="300" src="images/posture tête.jpg" alt="img">
+                                    <img width="400" height="300" src="images/posture doights.jpg" alt="img">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+                <a href="index.html" class="boutton">Retour à l'accueil</a>
+            </section>
+
+            <footer>
+                <div class="conteneur"></div>
+                <p> 2024 Tir à l'Arc - Tous droits réservés</p>
+                </div>
+            </footer>
 
 </body>
 
