--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Tir à l'Arc - Accueil</title>
+    <script src="https://kit.fontawesome.com/2b7b2e9204.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -20,35 +21,35 @@
                 <li><a href="tir-a-l-arc.html">Le Tir à l'Arc</a></li>
                 <li><a href="page-finale.html">À propos</a></li>
             </ul>
+
         </nav>
         </div>
     </header>
 
     <section id="intro">
         <div class="conteneur">
-            <div class="intro-text">
-                <h2>Découvrez le Tir à l'Arc</h2>
-                <p>Un sport qui allie précision, concentration et discipline. Découvrez cet art millénaire.</p>
-                <img style="float:right" width="500px" height="500px" src="images/30.jpg" alt="Image d'un archer" />
+            <h2>Découvrez le Tir à l'Arc</h2>
+            <p>Un sport qui allie précision, concentration et discipline. Découvrez cet art millénaire.</p>
+            <img style="float:right" width="500px" height="500px" src="images/30.jpg" alt="Image d'un archer" />
 
-                <h2>Pourquoi pratiquer le Tir à l'Arc ?</h2>
-                <p>Le tir à l'arc est une discipline complète qui offre de nombreux bienfaits :</p>
-                <ul>
-                    <li>Amélioration de la concentration et de la gestion du stress</li>
-                    <li>Renforcement des muscles du haut du corps</li>
-                    <li>Compétitions serrée contre vous même ou contre d'autres personnes</li>
+            <h2>Pourquoi pratiquer le Tir à l'Arc ?</h2>
+            <p>Le tir à l'arc est une discipline complète qui offre de nombreux bienfaits :</p>
+            <ul>
+                <li>- Amélioration de la concentration et de la gestion du stress</li>
+                <li>- Renforcement des muscles du haut du corps</li>
+                <li>- Compétitions serrée contre vous même ou contre d'autres personnes</li>
 
-                    <img width="600px" height="300px" src="images/cible_nationnal.jpg" alt="Image d'un archer" />
-    
+                <img width="600px" height="300px" src="images/cible_nationnal.jpg" alt="Image d'un archer" />
 
-                </ul>
-                <a href="tir-a-l-arc.html" class="boutton">En savoir plus</a>
+    </section>
+    </ul>
+    <a href="tir-a-l-arc.html" class="boutton">En savoir plus</a>
 
-                <footer>
-                    <div class="conteneur">
-                        <p> 2024 Tir à l'Arc - Tous droits réservés</p>
-                    </div>
-                </footer>
+    <footer>
+        <div class="conteneur">
+            <p> 2024 Tir à l'Arc : Arthur DUBOUST</p>
+        </div>
+    </footer>
 
 </body>
 
