--- a/page-finale.html
+++ b/page-finale.html
@@ -20,48 +20,54 @@
                     <li><a href="page-finale.html">À propos</a></li>
                 </ul>
             </nav>
-    </header>
-        <div class="conteneur">
-            <div class="intro-text">
-            <h2>Qui suis-je ?</h2>
-            <p>Je suis passionné par le tir à l'arc depuis plusieurs années. J'ai commencé à l'âge de 12 ans dans le club de Condé (près d'Alençon). 
-                Ce club est fais partis de l'association ufolep, ce qui signifie qu'il ne fais pas partis de la fédération.</p>
-
-            <h2>La compétition</h2>
-            <p>En ufolep il y a 2 type de compétitions : Les régionals et les nationals. Un régional à lieu tous les mois et il y a un national en hiver
-                pour le tir en intérieur et un national été pour le tir en extérieur.
-                Etant champion de l'Orne chaques moi et après avoir fais un national hiver satisfaisant, je décide de faire le national été.
-            </p>
         </div>
-        
-        <section id="tableaux">
-            <div class="tableaux container">
-                <div class="tableaux-header">
-                    <div class="all-tableaux">
-                        <div class="tableau-item">
-                            <div class="tableau-info">
-                                <h2>Les Techniques</h2>
-                                <p>Les techniques de tir sont variées : posture, visée, respiration, et décoche de
-                                    la corde sont
-                                    autant d'éléments à maîtriser pour un tir réussi. Ces mouvements sont long à
-                                    mettre en place et
-                                    nécessite une rigueur importante afin de ne pas tirer d'une mauvaise manière</p>
-                            </div>
-                            <div class="tableau-img">
-                                <img width="900" height="120" src="/images/classement.png" alt="img">
-                            </div>
+    </header>
+    <div class="conteneur">
+        <h2>Qui suis-je ?</h2>
+        <p>Je suis passionné par le tir à l'arc depuis plusieurs années. J'ai commencé à l'âge de 12 ans dans le club de
+            Condé (près d'Alençon).
+            Ce club est fais partis de l'association ufolep, ce qui signifie qu'il ne fais pas partis de la fédération.
+        </p>
+
+        <h2>La compétition</h2>
+        <p>En ufolep il y a 2 type de compétitions : Les régionals et les nationals. Un régional à lieu tous les mois et
+            il y a un national en hiver
+            pour le tir en intérieur et un national été pour le tir en extérieur.
+            Etant champion de l'Orne chaques mois en 2023 et après avoir fais un national hiver satisfaisant, je décide
+            de faire le national été. Malgrès un
+            entrainement assez conséquent et une grande détermination, je finis au pied du podium, 4ème, à 11 points
+            près et déstiné à me faire charier par mes amis
+            toute l'année :(</p>
+    </div>
+
+    <section id="tableaux">
+        <div class="tableaux container">
+            <div class="tableaux-header">
+                <div class="all-tableaux">
+                    <div class="tableau-item">
+                        <div class="tableau-info">
+                            <h2>Les Techniques</h2>
+                            <p>Les techniques de tir sont variées : posture, visée, respiration, et décoche de
+                                la corde sont
+                                autant d'éléments à maîtriser pour un tir réussi. Ces mouvements sont long à
+                                mettre en place et
+                                nécessite une rigueur importante afin de ne pas tirer d'une mauvaise manière</p>
+                        </div>
+                        <div class="tableau-img">
+                            <img width="900" height="120" src="/images/classement.png" alt="img">
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
 
 
-    
+    <a href="index.html" class="boutton">Retour à l'accueil</a>
 
     <footer>
         <div class="conteneur">
-            <p> 2024 Tir à l'Arc - Tous droits réservés</p>
+            <p> 2024 Tir à l'Arc : Arthur DUBOUST</p>
         </div>
     </footer>
 
