changement des images sur le html

--- a/tir-a-l-arc.html
+++ b/tir-a-l-arc.html
@@ -51,7 +51,7 @@
                             src="https://www.erhart-sports.com/5974-large_default/kinetic-lancer-kit-arc-classique.jpg"
                             alt="img">
                         <img width="300" height="300"
-                            src="https://www.sherwood-archerie.com/images/bl_1584612_image1.jpg" alt="img">
+                            src="images/arc-poulie.jpg" alt="img">
                     </div>
                 </div>
             </div>
@@ -73,9 +73,9 @@
                     <div class="tableau-img">
                         <img width="300" height="300"
                             src="https://www.cdiscount.com/pdt2/3/4/7/1/700x700/ovo5293216077347/rw/fleche-d-arc-fleches-de-chasse-tir-a-l-arc-fleche.jpg"
-                            alt="img">
+                            alt="">
                         <img width="300" height="300"
-                            src="https://www.sherwood-archerie.com/images/bl_721584_image2.jpg" alt="img">
+                            src="images/palette.jpg" alt="">
                     </div>
                 </div>
             </div>
