--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Tir à l'Arc - Accueil</title>
     <script src="https://kit.fontawesome.com/2b7b2e9204.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/png" href="images/iconne.PNG">
 </head>
 
 <body>
@@ -23,7 +24,6 @@
             </ul>
 
         </nav>
-        </div>
     </header>
 
     <section id="intro">
@@ -38,16 +38,19 @@
                 <li>- Amélioration de la concentration et de la gestion du stress</li>
                 <li>- Renforcement des muscles du haut du corps</li>
                 <li>- Compétitions serrée contre vous même ou contre d'autres personnes</li>
+            </ul>
 
-                <img width="600px" height="300px" src="images/cible_nationnal.jpg" alt="Image d'un archer" />
+            <img width="600px" height="300px" src="images/cible_nationnal.jpg" alt="Image d'un archer" />
 
     </section>
-    </ul>
     <a href="tir-a-l-arc.html" class="boutton">En savoir plus</a>
 
     <footer>
         <div class="conteneur">
             <p> 2024 Tir à l'Arc : Arthur DUBOUST</p>
+            <a href="https://github.com/Arthur-6161"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.youtube.com/watch?v=jr6VS-KqaP0"><i class="fa-solid fa-music"></i></a>
+            <a href="images/hippo.jpg"><i class="fa-solid fa-hippo"></i></a>
         </div>
     </footer>
 
