--- a/page-finale.html
+++ b/page-finale.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>À propos - Tir à l'Arc</title>
     <link rel="stylesheet" href="CSS/style.css">
+    <script src="https://kit.fontawesome.com/2b7b2e9204.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/png" href="images/iconne.PNG">
 </head>
 
 <body>
@@ -68,6 +70,9 @@
     <footer>
         <div class="conteneur">
             <p> 2024 Tir à l'Arc : Arthur DUBOUST</p>
+            <a href="https://github.com/Arthur-6161"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.youtube.com/watch?v=jr6VS-KqaP0"><i class="fa-solid fa-music"></i></a>
+            <a href="images/hippo.jpg"><i class="fa-solid fa-hippo"></i></a>
         </div>
     </footer>
 
