--- a/tir-a-l-arc.html
+++ b/tir-a-l-arc.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Le Tir à l'Arc - Présentation</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/2b7b2e9204.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/png" href="images/iconne.PNG">
 </head>
 
 <body>
@@ -50,8 +52,7 @@
                         <img width="300" height="300"
                             src="https://www.erhart-sports.com/5974-large_default/kinetic-lancer-kit-arc-classique.jpg"
                             alt="img">
-                        <img width="300" height="300"
-                            src="images/arc-poulie.jpg" alt="img">
+                        <img width="300" height="300" src="images/arc-poulie.jpg" alt="img">
                     </div>
                 </div>
             </div>
@@ -74,8 +75,7 @@
                         <img width="300" height="300"
                             src="https://www.cdiscount.com/pdt2/3/4/7/1/700x700/ovo5293216077347/rw/fleche-d-arc-fleches-de-chasse-tir-a-l-arc-fleche.jpg"
                             alt="">
-                        <img width="300" height="300"
-                            src="images/palette.jpg" alt="">
+                        <img width="300" height="300" src="images/palette.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -131,8 +131,11 @@
 <a href="index.html" class="boutton">Retour à l'accueil</a>
 
 <footer>
-    <div class="conteneur"></div>
-    <p> 2024 Tir à l'Arc : Arthur DUBOUST</p>
+    <div class="conteneur">
+        <p> 2024 Tir à l'Arc : Arthur DUBOUST</p>
+        <a href="https://github.com/Arthur-6161"><i class="fa-brands fa-github"></i></a>
+        <a href="https://www.youtube.com/watch?v=jr6VS-KqaP0"><i class="fa-solid fa-music"></i></a>
+        <a href="images/hippo.jpg"><i class="fa-solid fa-hippo"></i></a>
     </div>
 </footer>
 
